; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_packet_factory.c_make_set_adv_report_flow_control.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/hci/extr_hci_packet_factory.c_make_set_adv_report_flow_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@HCI_VENDOR_BLE_SET_ADV_FLOW_CONTROL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32, i32, i32)* @make_set_adv_report_flow_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @make_set_adv_report_flow_control(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 5, i32* %8, align 4
  %10 = load i32, i32* @HCI_VENDOR_BLE_SET_ADV_FLOW_CONTROL, align 4
  %11 = call i32* @make_command(i32 %10, i32 5, i32** %7)
  store i32* %11, i32** %9, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* %4, align 4
  %14 = call i32 @UINT8_TO_STREAM(i32* %12, i32 %13)
  %15 = load i32*, i32** %7, align 8
  %16 = load i32, i32* %5, align 4
  %17 = call i32 @UINT16_TO_STREAM(i32* %15, i32 %16)
  %18 = load i32*, i32** %7, align 8
  %19 = load i32, i32* %6, align 4
  %20 = call i32 @UINT16_TO_STREAM(i32* %18, i32 %19)
  %21 = load i32*, i32** %9, align 8
  ret i32* %21
}

declare dso_local i32* @make_command(i32, i32, i32**) #1

declare dso_local i32 @UINT8_TO_STREAM(i32*, i32) #1

declare dso_local i32 @UINT16_TO_STREAM(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
